<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RxOne</string>
    <string name="sync_label_customers">Customers</string>
    <string name="toast_information_saved">Information Saved</string>
    <string name="toast_image_size_too_large">Image size too large !</string>
    <string name="label_no_customer_found">No Customer Found !</string>
    <string name="message_to">Message to %s</string>
    <string name="add_internal_note">Add and internal note</string>
    <string name="internal_note_hint">Add an internal note that will not be sent to the followers</string>
    <string name="label_log_note">Log note</string>
    <string name="label_send_message"><u>Send a message</u></string>
    <string name="label_log_an_internal_note"><u>Log an internal note</u></string>
    <string name="label_version_build">Build</string>
    <string name="toast_permission_download_storage">Storage permission required to create downloaded file on your sdcard.</string>
    <string name="toast_permission_download_storage_help">Storage permission required to store downloaded files on sdcard of your phone. Please grant permission for use this feature</string>
    <string name="confirm_are_you_sure_want_to_delete">Are you sure want to delete ?</string>
    <string name="toast_record_deleted">Record deleted</string>


    <string name="label_no_product_found">No Product Found !</string>
    <string name="sync_label_products">Products</string>
    <string name="sync_label_product_images">Product Images</string>

    <string name="label_no_purchase_found">No purchase found !</string>
    <string name="sync_label_purchases">Purchase</string>
    <string name="sync_label_pos_order">POS Order</string>
    <string name="sync_label_pos_order_line">POS Order Line</string>
    <string name="sync_label_pos_config">POS Config</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="all">All</string>
    <string name="stub_blender">Blender</string>
    <string name="stub_popular_items">Popular Items</string>
    <string name="stub_purchase_from_3_vendors">__Purchase from 3 Vendors</string>
    <string name="stub_thursday_7th_april_2019">__Thursday, 7th, April, 2019</string>
    <string name="stub_5000_00">5000.00__</string>
    <string name="stub_7">7</string>
    <string name="stub_product_name">_Archy Paracetamol (X12)</string>
    <string name="stub_medication_type">Analgesic</string>
    <string name="stub_qty">5/10</string>
    <string name="menu">Menu</string>
    <string name="stub_price">$25.00</string>

    <!--Material-X-->

    <string name="version_unknown">Unknown</string>
    <string name="app_version">Version</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>


    <string name="NEXT">NEXT</string>

</resources>
