<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/default_8dp"
    android:paddingStart="@dimen/default_8dp"
    android:paddingRight="@dimen/default_16dp"
    android:paddingEnd="@dimen/default_16dp"
    android:paddingTop="@dimen/default_16dp"
    android:paddingBottom="@dimen/default_8dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <odoo.controls.BezelImageView
            android:id="@+id/list_item_image"
            android:src="@drawable/ic_medical_drug_pill"
            android:layout_width="@dimen/default_50_dp"
            android:layout_height="@dimen/default_50_dp"
            android:layout_margin="@dimen/default_8dp"
            android:layout_marginLeft="@dimen/default_8dp"
            android:layout_marginStart="@dimen/default_8dp"
            app:maskDrawable="@drawable/circle_mask" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_8dp"
            android:layout_marginStart="@dimen/default_8dp"
            android:layout_weight="1"
            android:orientation="vertical">
                <TextView
                    android:id="@+id/list_item_name"
                    android:text="@string/stub_product_name"
                    android:textAppearance="@style/ListTitleText"
                    style="@style/ListTitleLayout"/>
                <TextView
                    android:id="@+id/list_item_type"
                    android:text="@string/stub_medication_type"
                    android:textAppearance="@style/ListSubtitleText"
                    style="@style/ListSubtitleLayout"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ProgressBar
                        android:id="@+id/list_item_stock_level"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_marginRight="@dimen/default_16dp"
                        android:layout_marginEnd="@dimen/default_16dp"
                        android:progress="50"
                        android:max="100"
                        style="?android:attr/progressBarStyleHorizontal"/>

                    <TextView
                        android:id="@+id/list_item_qty"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@string/font_normal"
                        android:text="@string/stub_qty"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:textAppearance="@style/ListInfo.Purple" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/default_8dp"
            android:layout_marginStart="@dimen/default_8dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/list_item_menu"
                android:contentDescription="@string/menu"
                android:background="@color/colorPrimaryWhite"
                android:src="@drawable/ic_more_vert_black_24dp"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="end"/>
            <TextView
                android:id="@+id/list_item_price"
                android:text="@string/stub_price"
                android:layout_weight="1"
                android:layout_width="@dimen/default_88dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>
    </LinearLayout>

